# llm-retrieval-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/api/routes/: ask.py  search.py
app/core/: auth.py  config.py  logging.py
app/db/: models.py  session.py
app/jobs/: queue.py  tasks.py
app/models/: schemas.py
app/retrieval/: bm25.py  dense.py  hybrid.py  reranker.py  storage.py  types.py
app/services/: generation.py  search_service.py
deploy/: render.yaml
scripts/: evaluate.py  ingest.py
story1_llm_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunking.py  test_hybrid.py
